--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@hookform/resolvers": "4.1.1",
+    "@mui/icons-material": "6.3.1",
     "@mui/material": "6.3.1",
+    "@reduxjs/toolkit": "2.5.0",
     "axios": "1.7.9",
     "gh-pages": "^6.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.54.2",
+    "react-redux": "9.2.0",
+    "react-router": "7.2.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -28,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "sass-embedded": "^1.89.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
